--- a/src/component/contactus/card/Card.module.css
+++ b/src/component/contactus/card/Card.module.css
@@ -32,11 +32,11 @@
   margin: 0 0 20px 0;
   font-size: 1.8rem;
   background: linear-gradient(90deg, #00d4ff, #0077ff);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  /* -webkit-background-clip: text; */
+  /* -webkit-text-fill-color: transparent; */
   font-weight: 600;
 }
-/* 
+
 .socialIcons {
   display: flex;
   gap: 15px;
@@ -52,7 +52,7 @@
 .socialIcon:hover {
   color: #0077ff;
   transform: translateY(-3px);
-} */
+}
 
 .contactInfo {
   display: flex;
@@ -99,7 +99,7 @@
   margin: 0 0 25px 0;
   font-size: 1.8rem;
   background: linear-gradient(90deg, #00d4ff, #0077ff);
-  -webkit-background-clip: text;
+  /* -webkit-background-clip: text; */
   -webkit-text-fill-color: transparent;
   font-weight: 600;
 }
